8254317: C2: Resource consumption of ConvI2LNode::Ideal() grows exponentially

In the optimization ConvI2L(AddI(x, y)) -> AddL(ConvI2L(x), ConvI2L(y)) within
ConvI2LNode::Ideal(), handle the special case x = y by feeding both inputs of
AddL from a single ConvI2L node rather than creating two semantically equivalent
ConvI2L nodes. This avoids an exponential number of calls to
ConvI2LNode::Ideal() when dealing with long chains of AddI nodes. Disable the
optimization for the pattern ConvI2L(SubI(x, x)), which is simplified to zero
during parsing anyway. Add a set of regression tests for the transformation that
cover different shapes of AddI subgraphs. Also add a microbenchmark that
exercises the special case, for performance regression testing.